--- a/composer.json
+++ b/composer.json
@@ -19,23 +19,29 @@
         "spatie/laravel-permission": "^3.13"
     },
     "require-dev": {
+        "beyondcode/laravel-dump-server": "^1.0",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
-        "laravel/sail": "^1.0.1",
-        "mockery/mockery": "^1.4.4",
-        "phpunit/phpunit": "^9.5.10",
-        "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "jason-guru/laravel-make-repository": "^0.0.3",
+        "laravel/sail": "^1.0.1",
+        "mockery/mockery": "^1.4.4",
+        "nunomaduro/collision": "^5.10",
+        "phpunit/phpunit": "^9.5.10",
         "sven/artisan-view": "^3.3"
-
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+
+	    "files": [
+	
+	        "bootstrap/helpers.php"
+	
+	    ]
     },
     "autoload-dev": {
         "psr-4": {
