--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "spatie/laravel-permission": "^3.13"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.6",
         "beyondcode/laravel-dump-server": "^1.0",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
